--- a/src/app/components/generator/generator.component.html
+++ b/src/app/components/generator/generator.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="text-align: center">
-  <div class="col-md-12" style="text-align: center">
-    <h3>ელექტრონული ზედდებული #{{ transferToSection.addon }}</h3>
+  <div class="col-md-12" style="text-align: center; ">
+    <h3>ელექტრონული ზედდებული #{{ transferToSection.addon['Left'] }}  <input type="text" [(ngModel)]="transferToSection.addon['Right']" style="border: 0px; width: 100px; display: inline-block" (ngModelChange)="change()"></h3>
   </div>
 </div>
 <div class="row">
@@ -18,15 +18,16 @@
     </ng-template>
     <ng-template pTemplate="body" let-cart>
       <tr>
-        <td>{{cart['entryDate']}}</td>
+        <td>{{cart['entryDate'].substr(0,10)}}</td>
         <td>{{cart['name']}}</td>
         <td>{{cart['maker']?cart['maker']['name']:'' }}</td>
         <td>{{cart['model']? cart['model']['name']: ''}}</td>
         <td>{{cart['price']}}</td>
         <td>{{cart['count']}}</td>
-        <td>{{cart['barcode']}}</td>
+        <td>{{(cart['spend']===1)? '': cart['barcode']}}</td>
       </tr>
     </ng-template>
   </p-table>
 </div>
+
 
