--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -5,4 +5,13 @@
   }
 .app-header button:nth-child(5)  {display: none !important;}
 
- 
+app-sidebar, app-header, app-warehouse, app-property, p-tabmenu, ul[role="tablist"], table thead {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+// width: calc(100% - 10px);
